Fix for overflowing because of flag&arms)

--- a/src/scss/components/_details.scss
+++ b/src/scss/components/_details.scss
@@ -96,12 +96,18 @@
     }
 
     & img {
-      width: 85%;
+      max-width: 100%;
+      max-height: 100%;
       border-radius: 3px;
       transition: transform 0.3s;
 
+      @media only screen and (max-width: 600px) {
+        width: 60%;
+        height: 60%;
+      }
+
       &:hover {
-        transform: scale(1.2);
+        transform: scale(1.5);
       }
     }
   }
